# fastCRUD

./: .gitignore  addClass.py  app.db  clear_test.sh  main.py  mypy.ini  pyproject.toml  requirements.txt  teste.py
_teste/_FILES/: endpoint.py  endpoint.pyt  model.py  model.pyt  schema.py  schema.pyt
add_class/: addClass.py  classes.py  fields.py  imports.py
app/: database.py  enums.py
app/endpoints/: account.py  product.py  user.py
app/models/: account.py  user.py
app/product/: endpoints.py
app/schemas/: account.py  base.py  user.py
app/user/: endpoints.py  models.py  schemas.py
core/: _types.py  consts.py  crud_router.py  endpoints.py  models.py  singleton.py  user.py  utils.py
